--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   http: ^0.13.3
   shared_preferences: ^2.0.7
   provider: ^6.0.2
+  fl_chart: ^0.40.0
+  firebase_database: ^9.0.6
+  firebase_core: ^1.12.0
+
 
 dev_dependencies:
   flutter_test:
