--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   fl_chart: ^0.40.0
   firebase_database: ^9.0.6
   firebase_core: ^1.12.0
+  google_fonts: ^2.3.1
 
 
 dev_dependencies:
